app/javascript/style/chat.scss
@use 'utils/color';
@use 'utils/font';
@use 'utils/text';
@use 'utils/reactions';
@use "utils/breakpoints" as *;
@use 'utils/scale';
@use "utils/z_index";

// Realtime chat section
.chat-section {
  flex: 1;
  display: flex;
  flex-direction: column;
  background-color: color.$white;
  font-size: 1rem;
  position: relative;

  .messages-overflow-container {
    position: relative;
    flex: 1 1 auto;
    overflow-y: auto;
    height: 0;
    word-break: break-word;
    overflow-wrap: break-word;
    &::-webkit-scrollbar-track {
      background: color.$white;
    }
    .messages {
      min-height: 95%; // This keeps the messages taking up some space so that the first message is below
      position: relative;
      display: flex;
      flex-direction: column;
      justify-content: flex-end;

      @mixin large() {
        max-width: scale.$content_secondary_width; // If this isn't here, chat breaks. #MamaShayBug
      }

      .user-reaction {
        margin-top: 10px;
        color: color.$neutral-regular;
        height: 34px;
        margin-left: 10px;
        .content {
          border: 1px solid color.$neutral-soft;
          border-radius: 10px;
          display: inline-flex;
          padding: 0 0.75rem;
          div {
            margin: 5px 0px 5px 6px;
          }
        }

        &:last-of-type {
          padding-bottom: 10px;
        }
      }

      .user-joined {
        color: color.$neutral-regular;
        display: flex;
        align-items: center;
        justify-content: center;
        margin: 10px 10px 0 10px;
        border-radius: 10px;
        padding: 3px 10px;

        div {
          margin-left: 6px;
          align-items: center;
          margin-right: 4px;
          text-align: center;
          font-size: 14px;
        }
      }

      &:last-of-type {
        padding-bottom: 10px;
      }
    }
  }

  .chat-scroll {
    // layout
    display: flex;
    position: absolute;
    bottom: 0;
    right: 0;
    transform: translate(-30%, -185%);
    padding: 0.65rem;

    // style
    cursor: pointer;
    border-radius: 100%;
    background-color: color.$neutral-background;
    border: 2px solid color.$white;

    svg {
      fill: color.$neutral-regular;
    }

    // @include smallTall() {
    //   bottom: 80px;
    //   right: 12px;
    // }
  }

  .stream-end {
    border-top: 1px solid color.$neutral-accents;
    padding: 10px;
    z-index: z_index.$chat-text-entry;
    position: relative;
    background: color.$white;

    &--content {
      // layouts
      display: flex;
      justify-content: center;
      align-items: center;
      text-align: center; // in case it wraps
      padding: 7px 0;

      // styles
      border-radius: 10px;
      background: color.$neutral-accents;
      color: color.$neutral-regular;
    }
  }

  .message-write,
  .message-login-prompt {
    border-top: 1px solid color.$neutral-accents;
    width: 100%;
    min-height: 55px;
    background: color.$white;
    border-radius: 0px 0px 10px 10px;
    z-index: z_index.$chat-text-entry;

    > * {
      margin: 10px;
    }

    .chat-controls {
      display: flex;
      .write-area {
        padding: 0.5rem 1rem;
        background: color.$neutral-background;
        line-height: 27px;
        border-radius: 10px;
        outline: none;
        flex-grow: 1;
        word-break: break-word;
        &:empty:before {
          content: attr(placeholder);
          color: color.$neutral-middle;
        }
        &:focus:before {
          content: "";
        }
      }
      .message-write__send {
        display: none;
        border: 1px solid color.$veue-corporate;
        background: color.$veue-corporate;
        svg {
          margin-left: 4px;
          path {
            fill: color.$white;
          }
        }
      }
      .reaction-button-area {
        display: flex;
        border: 1px solid color.$neutral-middle;
        svg {
          margin-left: 3px;
          path {
            fill: color.$neutral-middle;
          }
        }
      }
      .reaction-button-area,
      .message-write__send {
        align-items: center;
        border-radius: 10px;
        margin-left: 10px;
        width: 42px;
        height: 42px;
        cursor: pointer;
        align-self: flex-end;
        svg {
          width: 18px;
          height: 18px;
          padding: 10px;
        }
        &.active {
          cursor: default;
          border: 1px solid color.$veue-corporate;
          svg {
            animation: beating 3s;
            path {
              fill: color.$veue-corporate;
            }
          }
        }
      }
    }
  }
}

